yaml/nextcloud/03-mysql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: yobasystems/alpine-mariadb:latest
        name: mysql
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3306
            name: mysql
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: nextcloud-mysql
