yaml/nextcloud/04-nextcloud-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: cloud
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/component: app
    spec:
      containers:
      - name: nextcloud
        image: "nextcloud:latest"
        #image: "nextcloud:production-apache"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders:
            - name: Host
              value: "cloud.shpaq.org"
          initialDelaySeconds: 30
          periodSeconds: 180
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders:
            - name: Host
              value: "cloud.shpaq.org"
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 30
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/
          subPath: root
        - name: nextcloud-data
          mountPath: /var/www/html
          subPath: html
        - name: nextcloud-data
          mountPath: /var/www/html/data
          subPath: data
        - name: nextcloud-data
          mountPath: /var/www/html/config
          subPath: config
        - name: nextcloud-data
          mountPath: /var/www/html/custom_apps
          subPath: custom_apps
        - name: nextcloud-data
          mountPath: /var/www/tmp
          subPath: tmp
        - name: nextcloud-data
          mountPath: /var/www/html/themes
          subPath: themes
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/role: worker
        kubernetes.io/hostname: rpi-k3s-worker4
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-storage
      securityContext:
        fsGroup: 33
